--- a/pages/car/car.wxss
+++ b/pages/car/car.wxss
@@ -20,9 +20,10 @@ page {
   width:100%;
   /* height:200px; */
   border-bottom: 1px solid #eee;
+
 }
-item-list .lishang {
-  margin-bottom:40px;
+.item-list  {
+  margin-bottom:50px;
 }   
 
 
@@ -38,6 +39,7 @@ item-list .lishang {
 }
 .item-list .item .content .title {
 font-size:20px;
+color:rgb(26, 19, 19);
 }
 .item-list .item .content .price-info {
   display: flex;
